--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<i class="icon-youtube"></i>
 					</div></a>
 				<div style="clear:both"></div>
-				<div id="info"> <br /><br />Title <br /><br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin accumsan enim commodo tempor vestibulum. Donec id consectetur ante, eget finibus nisl. Donec efficitur nisl ut elit pulvinar lacinia. Aliquam hendrerit rutrum enim ut volutpat. Suspendisse dictum sodales sapien eget rutrum. Vestibulum auctor felis sapien, a accumsan nunc sollicitudin at. Nulla condimentum, elit in euismod semper, lorem lorem mattis enim, sed auctor nisl nulla non quam.  </div>
+				<div id="info"> <br />Objectives  <br /><br /> Effective team worker able to develop own tasks and cooperate and support other members of the team. Able to follow instructions and take on new skills. Hard-working and able to work efficiently under pressure. Honest, professional, well-organised and committed with my work.  </div>
 					</div>
 		<div style="clear:both"></div>
 		
