--- a/personaldata.html
+++ b/personaldata.html
@@ -9,16 +9,17 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/fontello.css" type="text/css" />
 	<link href="https://fonts.googleapis.com/css?family=Nixie+One|Rochester" rel="stylesheet">
+	<script src="timer.js"></script>
 </head>
 
-<body>
+<body onload="counting();">
 
 	<div id="container">
 	
 		<div class="rectangle">
 			
 			<div id="name">Joanna Wojtowicz</div>
-			<div id="clock">15:30:00</div>
+			<div id="time"></div>
 			<div style="clear:both"></div>
 		</div>
 	
@@ -39,7 +40,7 @@
 					<i class="icon-youtube"></i>
 					</div></a>
 				<div style="clear:both"></div>
-				<div id="info"><br /><br />  Personal data <br /><br /> email: asiasumo@gmail.com<br /> adress: 2A Rundell Crescent, London, NW4 3DA<br /> mobile: 07553538113<br /> <br />Balchelor of Computer Science Cracow <br/ > University of Economics <br />Cracow, Poland <br />In progress<br /><br />English: advanced<br />Polish: Native
+				<div id="info"><br />  Personal data <br /><br /> email: asiasumo@gmail.com<br /> adress: 2A Rundell Crescent, London, NW4 3DA<br /> mobile: 07553538113<br /> <br />Bachelor of Computer Science Cracow <br/ > University of Economics <br />Cracow, Poland <br />In progress<br /><br />English: advanced<br />Polish: Native
 				</div>
 					</div>
 		<div style="clear:both"></div>
