--- a/previousemployment.html
+++ b/previousemployment.html
@@ -9,16 +9,17 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/fontello.css" type="text/css" />
 	<link href="https://fonts.googleapis.com/css?family=Nixie+One|Rochester" rel="stylesheet">
+	<script src="timer.js"></script>
 </head>
 
-<body>
+<body onload="counting();">
 
 	<div id="container">
 	
 		<div class="rectangle">
 			
 			<div id="name">Joanna Wojtowicz</div>
-			<div id="clock">15:30:00</div>
+			<div id="time"></div>
 			<div style="clear:both"></div>
 		</div>
 	
