--- a/references.html
+++ b/references.html
@@ -9,16 +9,17 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/fontello.css" type="text/css" />
 	<link href="https://fonts.googleapis.com/css?family=Nixie+One|Rochester" rel="stylesheet">
+	<script src="timer.js"></script>
 </head>
 
-<body>
+<body onload="counting();">
 
 	<div id="container">
 	
 		<div class="rectangle">
 			
 			<div id="name">Joanna Wojtowicz</div>
-			<div id="clock">15:30:00</div>
+			<div id="time"></div>
 			<div style="clear:both"></div>
 		</div>
 	
@@ -39,7 +40,7 @@
 					<i class="icon-youtube"></i>
 					</div></a>
 				<div style="clear:both"></div>
-				<div id="info"><br /><br /> References <br /><br /> Kelly Pope<br />HR Manager<br />Hilton Food Group plc<br />The Interchange<br />2-8 Latham Rd<br />Huntingdon, Cambs<br />PE29 6YE<br />Contact: Kelly.PopeHiltonFoods.co.uk  </div>
+				<div id="info"><br /> References <br /><br /> Kelly Pope<br />HR Manager<br />Hilton Food Group plc<br />The Interchange<br />2-8 Latham Rd<br />Huntingdon, Cambs<br />PE29 6YE<br />Contact: Kelly.PopeHiltonFoods.co.uk  </div>
 					</div>
 		<div style="clear:both"></div>
 		
